# email-triage-openenv

./: .gitignore  API.md  CHANGELOG.md  Dockerfile  EXECUTIVE_SUMMARY.md  FEATURES.md  FILE_MANIFEST.md  FINAL_SUMMARY.md  LICENSE  PHASE_1_CHECKLIST.md  PHASE_1_INNOVATIONS.md  README.md  STATUS_REPORT.md  SUBMISSION_SUMMARY.md  UPGRADE_COMPLETE.txt  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validate.py
frontend/: mini-rl-environment.jsx
server/: __init__.py  app.py
src/: accessibility.py  ai_insights.py  analytics.py  causal_ai.py  emotional_ai.py  enterprise_metrics.py  environment.py  learning_orchestrator.py  models.py  neuro_symbolic.py  reward.py  self_healing.py  server.py  swarm_intelligence.py  synthetic_data.py  tools.py
src/data/: emails.py  investigations.py  workflows.py
src/graders/: __init__.py  classify_grader.py  investigate_grader.py  respond_grader.py  thread_grader.py  workflow_grader.py
src/tasks/: __init__.py  email_classify.py  email_investigate.py  email_respond.py  email_thread.py  email_triage_workflow.py
tests/: test_accessibility.py  test_analytics.py  test_causal_ai.py  test_emotional_ai.py  test_enterprise_metrics.py  test_environment.py  test_graders.py  test_inference.py  test_learning_orchestrator.py  test_neuro_symbolic.py  test_self_healing.py  test_server.py  test_swarm_intelligence.py  test_synthetic_data.py
