[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email-triage-env"
version = "1.0.0"
description = "A real-world OpenEnv environment for email triage and response"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "EmitBoi"}
]
keywords = ["openenv", "reinforcement-learning", "email-triage", "llm", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "openai>=1.58.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/EmitBoi/email-triage-env"
Repository = "https://huggingface.co/spaces/EmitBoi/email-triage-env"
Documentation = "https://huggingface.co/spaces/EmitBoi/email-triage-env"

[project.scripts]
email-triage-server = "src.server:start_server"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
